# Yenomal

./: .gitignore  .gitmodules  README.md  TODO.md  global_env.sh  research.md  temp.txt
datasets/product/pi05_aloha_common_autogaze_rmbench_hdf5/rmbench_demo_clean_train48_eval2/: metas.json  norm_stats.json
docs/architecture/: README.md  config要求.md  docs要求.md  manifest.md  命名要求总述.md  实验环境及复现方案.md  文件结构.md
docs/notes/maevla/: PLAN.md
docs/notes/maevla/pi05_autogaze/: plan.md  process.md  research.md  restrict.md  run.md
docs/notes/maevla/pi05_baseline/: process.md
docs/notes/maevla/simvla_autogaze/: list.md  plan.md  research.md
docs/notes/maevla/simvla_baseline/: process.md
docs/prompt/: Vibe Coding  论文阅读
docs/template/: process.md  pyproject.toml  research.md  restrict.md
docs/template/exp_bash/: eval.sh  manifest.sh  train.sh
scripts/data/rmbench/: build_rmbench_norm.sh  convert_lerobot.sh
scripts/projects/maevla/data/: build_rmbench_meta.sh  build_rmbench_norm.sh  prepare_rmbench_product.sh
scripts/projects/maevla/data/rmbench/: build_rmbench_meta.sh  convert_lerobot.sh
scripts/projects/maevla/pi05_autogaze/: dev_shell.sh  eval_common_autogaze_pytorch.sh  train_common_autogaze_pytorch.sh
scripts/projects/maevla/pi05_baseline/: env.sh  eval.sh  manifest.sh  train.sh
scripts/projects/maevla/simvla_autogaze/: eval.sh  smoke.sh  train.sh
scripts/projects/maevla/simvla_baseline/: eval.sh  manifest.sh  train.sh
src/: pyproject.toml
src/common/: __init__.py  smoke.py
src/common/vision/: __init__.py
src/common/vision/encoder/: __init__.py  siglip.py
src/common/vision/gaze_policy/: __init__.py  autogaze.py
src/common/vision/visual_gaze/: __init__.py  _utils.py  config.yaml  visual_gaze_encoder.py
src/common/vision_stacks/: __init__.py
src/common/vision_stacks/autogaze_siglip/: __init__.py  config.py  default_config.yaml  stack.py
src/projects/maevla/: manifest.yaml
src/projects/maevla/pi05_autogaze/: __init__.py  visual_prefix.py
src/projects/maevla/simvla_autogaze/: manifest.sh  manifest.yaml  run_train_smoke.sh
src/projects/maevla/simvla_autogaze/config/: autogaze_siglip_simvla.yaml
src/projects/maevla/simvla_autogaze/sandbox/models/: __init__.py  observation_encoder_autogaze.py
src/projects/maevla/simvla_baseline/: manifest.yaml
src/yenomal/nn/: __init__.py  projector.py
src/yenomal/nn/tokenizer/: __init__.py  patchify.py
src/yenomal/vision/encoder/: siglip.py
src/yenomal/vision/gaze_policy/: autogaze.py
src/yenomal/vision/visual_gaze/: config.py  visual_gaze_encoder.py
